# amadeus-agent-toolkit

./: README.md
python/: pyproject.toml  requirements.txt
python/amadeus_agent_toolkit/: api.py  configuration.py  functions.py  prompts.py  schema.py  tools.py
python/amadeus_agent_toolkit/langchain/: tool.py  toolkit.py
python/examples/langchain/: .env.template  main.py  requirements.txt
