[project]
name = "amadeus-agent-tool-kit"
version = "0.1.0"
description = "amadeus Agent ToolKit"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "amadeus", email = "support@alok87.in"}
]
keywords = ["amadeus", "api", "payments"]

[project.urls]
"Bug Tracker" = "https://github.com/amadeus/agent-toolkit/issues"
"Source Code" = "https://github.com/amadeus/agent-toolkit"

[tool.setuptools.packages.find]
include = ["amadeus_agent_toolkit*"]
exclude = ["tests*", "examples*"]

[tool.ruff]
# same as our black config
line-length = 79
extend-exclude = ["build"]

[tool.ruff.format]
# currently the default value, but opt-out in the future
docstring-code-format = false

[tool.pyright]
include = [
  "*",
]
exclude = ["build", "**/__pycache__"]
reportMissingTypeArgument = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportUnnecessaryIsInstance = true
reportPrivateImportUsage = true
reportUnnecessaryTypeIgnoreComment = true
